--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 
     <script src="https://cdn.tailwindcss.com"></script>
+    <script type="module" src="src/app.js"></script>
     <title>Movie Diary-Home</title>
 
     <script>
